update readme and swagger
