# src/user_management/v1/endpoints/update_user/update_user.py
@@ -1,9 +1,8 @@
-from fastapi import APIRouter, Depends, HTTPException
+from fastapi import APIRouter, Depends
 from sqlalchemy.orm import Session
 from user_management.database import deps
 from user_management.managers.user_manager import UserManager
 from user_management.schemas.UserResponse import UserResponse
-from user_management.v1.endpoints.get_user.schemas.GetUserCriteria import GetUserCriteria
 from user_management.v1.endpoints.mappers.user_mapper import UserMapper
 from user_management.v1.endpoints.update_user.schemas.UpdateUserRequest import UpdateUserRequest
 
@@ -22,6 +21,7 @@ def update_user(
     Update a specific user by id.
 
     Args:
+        user (UpdateUserRequest): _description_
         user_id (str): Unique ID of the user
         db_connection (Session, optional): db connection. Defaults to Depends(deps.get_db).
 
@@ -31,7 +31,7 @@ def update_user(
     Returns:
         UserResponse: _description_
     """
-    domain_request = GetUserCriteria(user_ids=[user_id])
+    domain_request = UserMapper.to_domain(user)
 
     user_manager = UserManager(db_connection)
     domain_response = user_manager.update_user(id_=user_id, user=domain_request)
